--- a/Assignment 13 - Group Project submission/src/style.css
+++ b/Assignment 13 - Group Project submission/src/style.css
@@ -1,11 +1,15 @@
+h1
+{
+font-weight: normal;
+}
+
 body
 {
 margin: 0;
 padding: 0;
 font-family: pms black;
-background-image: url(.jpg)
-
 }
+
 .signup-form
 {
 width: 350px;
@@ -19,7 +23,6 @@ text-align: center;
 .signup-form h1
 {
 margin-bottom: 30px;
-
 }
 
 .input-box
@@ -80,3 +83,4 @@ margin-left: auto;
 margin-right: auto;
 margin-bottom: -90px;
 }
+
